@@ -859,6 +859,202 @@ class QueryTest extends IntegrateCommon with BeforeAndAfterEach {
     results.size should be(4)
   }
 
+  test("scorePropagateOp test") {
+    def queryWithPropertyOp(id: String, op: String, shrinkageVal: Long) = Json.parse(
+      s"""{
+         |  "limit": 10,
+         |  "groupBy": ["from"],
+         |  "duplicate": "sum",
+         |  "srcVertices": [
+         |    {
+         |      "serviceName": "$testServiceName",
+         |      "columnName": "$testColumnName",
+         |      "id": $id
+         |    }
+         |  ],
+         |  "steps": [
+         |    {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "groupBy": ["from"],
+         |          "duplicate": "sum",
+         |          "index": "idx_1",
+         |          "scoring": {
+         |            "weight":1,
+         |            "time": 0
+         |          },
+         |          "transform": [["_from"]]
+         |        }
+         |      ]
+         |    }, {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName2",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "scorePropagateOp": "$op",
+         |          "scorePropagateShrinkage": $shrinkageVal
+         |        }
+         |      ]
+         |    }
+         |  ]
+         |}
+       """.stripMargin
+    )
+
+    def querySingleVertexWithOp(id: String, op: String, shrinkageVal: Long) = Json.parse(
+      s"""{
+         |  "limit": 10,
+         |  "groupBy": ["from"],
+         |  "duplicate": "sum",
+         |  "srcVertices": [
+         |    {
+         |      "serviceName": "$testServiceName",
+         |      "columnName": "$testColumnName",
+         |      "id": $id
+         |    }
+         |  ],
+         |  "steps": [
+         |    {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "groupBy": ["from"],
+         |          "duplicate": "countSum",
+         |          "transform": [["_from"]]
+         |        }
+         |      ]
+         |    }, {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName2",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "scorePropagateOp": "$op",
+         |          "scorePropagateShrinkage": $shrinkageVal
+         |        }
+         |      ]
+         |    }
+         |  ]
+         |}
+       """.stripMargin
+    )
+
+    def queryMultiVerticesWithOp(id: String, id2: String, op: String, shrinkageVal: Long) = Json.parse(
+      s"""{
+         |  "limit": 10,
+         |  "groupBy": ["from"],
+         |  "duplicate": "sum",
+         |  "srcVertices": [
+         |    {
+         |      "serviceName": "$testServiceName",
+         |      "columnName": "$testColumnName",
+         |      "ids": [$id, $id2]
+         |    }
+         |  ],
+         |  "steps": [
+         |    {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "groupBy": ["from"],
+         |          "duplicate": "countSum",
+         |          "transform": [["_from"]]
+         |        }
+         |      ]
+         |    }, {
+         |      "step": [
+         |        {
+         |          "label": "$testLabelName2",
+         |          "direction": "out",
+         |          "offset": 0,
+         |          "limit": 10,
+         |          "scorePropagateOp": "$op",
+         |          "scorePropagateShrinkage": $shrinkageVal
+         |        }
+         |      ]
+         |    }
+         |  ]
+         |}
+       """.stripMargin
+    )
+    val testId = "-30000"
+    val testId2 = "-4000"
+
+    val bulkEdges = Seq(
+      toEdge(1, insert, e, testId, 101, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId, 102, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId, 103, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId, 102, testLabelName2, Json.obj(weight -> 10)),
+      toEdge(1, insert, e, testId, 103, testLabelName2, Json.obj(weight -> 10)),
+      toEdge(1, insert, e, testId, 104, testLabelName2, Json.obj(weight -> 10)),
+      toEdge(1, insert, e, testId, 105, testLabelName2, Json.obj(weight -> 10)),
+
+      toEdge(1, insert, e, testId2, 101, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId2, 102, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId2, 103, testLabelName, Json.obj(weight -> -10)),
+      toEdge(1, insert, e, testId2, 102, testLabelName2, Json.obj(weight -> 10)),
+      toEdge(1, insert, e, testId2, 105, testLabelName2, Json.obj(weight -> 10))
+    )
+    insertEdgesSync(bulkEdges: _*)
+
+    val firstStepEdgeCount = 3l
+    val secondStepEdgeCount = 4l
+
+    var shrinkageVal = 10l
+    var rs = getEdgesSync(querySingleVertexWithOp(testId, "divide", shrinkageVal))
+    logger.debug(Json.prettyPrint(rs))
+    var results = (rs \ "results").as[List[JsValue]]
+    results.size should be(1)
+    var scoreSum = secondStepEdgeCount.toDouble / (firstStepEdgeCount.toDouble + shrinkageVal)
+    (results(0) \ "scoreSum").as[Double] should be(scoreSum)
+
+    rs = getEdgesSync(queryMultiVerticesWithOp(testId, testId2, "divide", shrinkageVal))
+    logger.debug(Json.prettyPrint(rs))
+    results = (rs \ "results").as[List[JsValue]]
+    results.size should be(2)
+    scoreSum = secondStepEdgeCount.toDouble / (firstStepEdgeCount.toDouble + shrinkageVal)
+    (results(0) \ "scoreSum").as[Double] should be(scoreSum)
+    scoreSum = 2.toDouble / (3.toDouble + shrinkageVal)
+    (results(1) \ "scoreSum").as[Double] should be(scoreSum)
+
+    // check for divide zero case
+    shrinkageVal = 30l
+    rs = getEdgesSync(queryWithPropertyOp(testId, "divide", shrinkageVal))
+    logger.debug(Json.prettyPrint(rs))
+    results = (rs \ "results").as[List[JsValue]]
+    results.size should be(1)
+    (results(0) \ "scoreSum").as[Double] should be(0)
+
+    // "plus" operation
+    rs = getEdgesSync(querySingleVertexWithOp(testId, "plus", shrinkageVal))
+    logger.debug(Json.prettyPrint(rs))
+    results = (rs \ "results").as[List[JsValue]]
+    results.size should be(1)
+    scoreSum = (firstStepEdgeCount + 1) * secondStepEdgeCount
+    (results(0) \ "scoreSum").as[Long] should be(scoreSum)
+
+    // "multiply" operation
+    rs = getEdgesSync(querySingleVertexWithOp(testId, "multiply", shrinkageVal))
+    logger.debug(Json.prettyPrint(rs))
+    results = (rs \ "results").as[List[JsValue]]
+    results.size should be(1)
+    scoreSum = (firstStepEdgeCount * 1) * secondStepEdgeCount
+    (results(0) \ "scoreSum").as[Long] should be(scoreSum)
+  }
+
   def querySingle(id: Int, offset: Int = 0, limit: Int = 100) = Json.parse(
     s"""
           { "srcVertices": [
