@@ -37,6 +37,9 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-50: Provide new HBase Storage Schema (Committed by DOYUNG YOON).
 
+    S2GRAPH-60: Add divide operation to scorePropagateOp.
+		(Contributed by Junki Kim<wishoping@gmail.com>, committed by DOYUNG YOON).
+
   IMPROVEMENT
 
     S2GRAPH-14: Abstract HBase specific methods in Management and Label (Committed by DOYUNG YOON).
